microservices/apollo-k8s/base/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-ingress
  namespace: apollo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik

  tls:                          # cert-manager will fill the secret
  - hosts:
      - api.apollo.faur.sh             
      - minio.faur.sh
    secretName: api-faur-sh-tls

  rules:
  - host: api.apollo.faur.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
  - host: api.apollo.local
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - path: /device
        pathType: Prefix
        backend:
          service:
            name: device-service
            port:
              number: 8080
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: media-analysis-service
            port:
              number: 8080
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 8080
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8080
      - path: /storage
        pathType: Prefix
        backend:
          service:
            name: file-storage-service
            port:
              number: 8080

  - host: minio.faur.sh
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio
              port:
                number: 9001
